Deleted unnecessary classes and logs, added whitespace where needed